--- a/index.html
+++ b/index.html
@@ -35,74 +35,18 @@
 
     <br>
 
-    <!--<main class="contPrin-carrousel ">
+    
 
-        <div class="contPrin-carrousel-slide">
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/futbol\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Futbol</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/basquet\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Basquet</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/hockey\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Hockey</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/natacion\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Natacion</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/tennis\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Tennis</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
-
-            <div class="contPrin-carrousel-slide-fondo" style="background-image: url(assets/imagenes/volley\ index.png);">
-                <div class="contPrin-carrousel-slide-fondo-info">
-                    <div class="contPrin-carrousel-slide-fondo-info-nombre">Volley</div>
-                    <div class="contPrin-carrousel-slide-fondo-info-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dicta sint, explicabo odio ab, ullam adipisci ex nihil et repudiandae quasi quas earum. Quidem sit fuga vel, suscipit iusto sapiente.</div>
-                    <button>Ver más</button>
-                </div>
-            </div>
+    <main class="row container-fluid" id="margen">
+        
+        <div class="col-lg-12 link">
 
         </div>
-
-        <div class="contPrin-carrousel-boton">
-            <button class="contPrin-carrousel-boton-anterior"></button>
-            <button class="contPrin-carrousel-boton-siguiente"></button>
-            10:18
-        </div>
-
-    </main>-->
-
-    <main class="col-lg-12">
 
     </main>
 
 
-    <main class="row container-fluid cont" id="margen">
+    <main class="row container-fluid" id="margen">
 
         <div class="cont-info1 col-lg-8">
             <h1>¿QUIENES SOMOS?</h1>
