--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -17,9 +17,18 @@
             </div>
         </div>
     </div>
+    
     <div class="contenedorTe-grande-mapa">
-        <div class="row container-fluid contenedorTe-mapa" id="margen">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13143.466081486165!2d-58.502699802870545!3d-34.55693485038848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732062085779!5m2!1ses-419!2sar"></iframe>
+        <div class="contenedorTe-mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26287.202991424674!2d-58.50689477773133!3d-34.55607776666323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732063948323!5m2!1ses-419!2sar"></iframe>
+        </div>
+        <div class="contenedorTe-text-mapa">
+            <div class="titulo-mapa">
+                <h1>Tenis Actividad</h1>
+            </div>
+            <div class="parrafo-mapa">
+                <p>Lugares mas cercanos donde podes disfrutar de jugar al tenis desde lugares para aprender a canchas para jugar vos</p>
+            </div>
         </div>
     </div>
 </body>
