--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -17,8 +17,44 @@
             </div>
         </div>
     </div>
+
+    <div class="contenedorTe-grande-tarjetas">
+        <div class="col-lg-4 tarjetaTe">
+            <div class="contenedorTe-imagen">
+                <img src="" alt="">
+            </div>
+            <div class="titulo-tarjetaTe">
+                <h1>aaaaa</h1>
+            </div>
+            <div class="parrafo-tarjetaTe">
+                <p></p>
+            </div>
+        </div>
+        <div class="col-lg-4 tarjetaTe">
+            <div class="contenedorTe-imagen">
+                <img src="" alt="">
+            </div>
+            <div class="titulo-tarjetaTe">
+                <h1>bbbbb</h1>
+            </div>
+            <div class="parrafo-tarjetaTe">
+                <p></p>
+            </div>
+        </div>
+        <div class="col-lg-4 tarjetaTe">
+            <div class="contenedorTe-imagen">
+                <img src="" alt="">
+            </div>
+            <div class="titulo-tarjetaTe">
+                <h1>cccc</h1>
+            </div>
+            <div class="parrafo-tarjetaTe">
+                <p></p>
+            </div>
+        </div>
+    </div>
     
-    <div class="contenedorTe-grande-mapa">
+    <div class="row col-lg-12 contenedorTe-grande-mapa" id="margen">
         <div class="contenedorTe-mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26287.202991424674!2d-58.50689477773133!3d-34.55607776666323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732063948323!5m2!1ses-419!2sar"></iframe>
         </div>
