cambie los colores de la pag de voley

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -11,6 +11,7 @@
     <title>Healthy Balance</title>
 </head>
 <body>
+    
     <header class="row container-fluid" id="header">
         <div class="logoP col-lg-7">
             <img src="../assets/iconos/logo.png" alt="">
@@ -33,8 +34,8 @@
         </div>
     </header>
     <div class="padre1">
-        <h1>VOLEY</h1>
-        <p>El voleibol, o vóley, es un deporte de equipo donde dos grupos de seis jugadores se enfrentan en una cancha 
+        <h1>Voley</h1>
+        <p class="parrafo1 animado">El voleibol, o vóley, es un deporte de equipo donde dos grupos de seis jugadores se enfrentan en una cancha 
         dividida por una roja. El objetivo es pasar el balón por encima de la red y hacerlo tocar el suelo del lado 
         contrario, respetando un máximo de tres toques por equipo. Se juega al mejor de cinco sets, ganando cada uno
         al llegar a 25 puntos con una diferencia mínima de 2. Es un deporte popular, con variantes como el voleibol
@@ -43,7 +44,7 @@
     <div class="padre2">
         <h1>Como mejorar en el voley</h1>
         <div class="contvol">
-            <div>
+            <div >
                 <img src="../assets/imagenes/voley1.png" width="100%" height="100%" class="img1">
                     <h2 class="tecnicas"> Practicar las técnicas básicas:</h2>
                     <p>Debemos aprender a colocar nuestro cuerpo, con los pies separados a la altura de los hombros, descargando el 
