--- a/index.html
+++ b/index.html
@@ -33,17 +33,48 @@
         </div>
     </header>
 
-    <br>
+    <!--<main class="row container-fluid link" id="margen">
 
-    <main class="row container-fluid" id="margen">
+        <div class="col-lg-12 link-1">
+            <div class="link-imagenes col-lg-2">
+                <a href="paginas/Futbol.html"><img src="assets/iconos/futbol index.png" style="border-radius: 50%;"></a>
+            </div>
+            <div class="col-lg-2 link-imagenes">
+                <a href="paginas/Basquetball.html"><img src="assets/iconos/basquet index.png" style="border-radius: 50%;"></a>
+            </div>
+        </div>
+        
+    </main>-->
 
-        <div class="col-lg-12 link">
+    <main class="row container-fluid link" id="margen">
 
+        <div class="col-lg-1 link-imagen-1" style="border-radius: 50%;">
+            <a href="paginas/Hockey.html"><img src="assets/iconos/hockey index.png" alt="" style="border-radius: 50%;"></a>
+        </div>
+
+        <div class="col-lg-1 link-imagen-2" style="border-radius: 50%;">
+            <a href="paginas/Natacion.html"><img src="assets/iconos/natacion index.png" alt="" style="border-radius: 50%;"></a>
+        </div>
+
+        <div class="col-lg-1 link-imagen-3" style="border-radius: 50%;">
+            <a href="paginas/Futbol.html"><img src="assets/iconos/futbol index.png" alt="" style="border-radius: 50%;"></a>
+        </div>
+
+        <div class="col-lg-1 link-imagen-4" style="border-radius: 50%;">
+            <a href="paginas/Basquetball.html"><img src="assets/iconos/basquet index.png" alt="" style="border-radius: 50%;"></a>
+        </div>
+
+        <div class="col-lg-1 link-imagen-5" style="border-radius: 50%;">
+            <a href="paginas/Volley.html"><img src="assets/iconos/volleyball index.png" alt="" style="border-radius: 50%;"></a>
+        </div>
+
+        <div class="col-lg-1 link-imagen-6" style="border-radius: 50%;">
+            <a href="paginas/Tenis.html"><img src="assets/iconos/tennis index.png" alt="" style="border-radius: 50%;"></a>
         </div>
 
     </main>
 
-    <br>
+    
 
     <main class="row container-fluid" id="margen">
 
