--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         
     </main>-->
 
+    <br>
+
     <main class="row container-fluid link" id="margen">
 
         <div class="col-lg-1 link-imagen-1" style="border-radius: 50%;">
@@ -74,7 +76,13 @@
 
     </main>
 
-    
+    <main class="row container-fluid linea" id="margen">
+
+        <div class="col-lg-12 linea-forma" style="border-radius: 5px;">
+
+        </div>
+
+    </main>
 
     <main class="row container-fluid" id="margen">
 
