--- a/index.html
+++ b/index.html
@@ -99,5 +99,21 @@
         </div>
         
     </main>
+
+    <main class="row container-fluid" id="margen">
+
+        <div class="col-lg-4 cont-decoracion">
+            <img src="assets/iconos/logo 4 index.png" class="imagen1">
+            <img src="assets/iconos/logo 5 index.png" class="imagen2">
+            <img src="assets/iconos/logo 6 index.png" class="imagen3">
+        </div>
+        
+        <div class="cont-info1 col-lg-8">
+            <h1>QUE HACEMOS?</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate nihil aliquam vitae alias ducimus animi assumenda error culpa voluptate dicta placeat, consectetur fugit minus cumque dignissimos qui eveniet omnis!</p>
+        </div>
+
+    </main>
 </body>
 </html>
