--- a/index.html
+++ b/index.html
@@ -108,9 +108,17 @@
         </div>
         
         <div class="cont-info1 col-lg-8">
-            <h1>QUE HACEMOS?</h1>
+            <h1>¿QUE HACEMOS?</h1>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate nihil aliquam vitae alias ducimus animi assumenda error culpa voluptate dicta placeat, consectetur fugit minus cumque dignissimos qui eveniet omnis!</p>
+        </div>
+
+    </main>
+
+    <main class="row container-fluid nutricion">
+
+        <div class="col-lg-12 nutricion ">
+            <h2></h2>
         </div>
 
     </main>
