--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main class="row container-fluid" id="margen">
 
         <div class="cont-info1 col-lg-8">
-            <h1>¿QUIENES SOMOS?</h1>
+            <h2>¿QUIENES SOMOS?</h2>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate nihil aliquam vitae alias ducimus animi assumenda error culpa voluptate dicta placeat, consectetur fugit minus cumque dignissimos qui eveniet omnis!</p>
         </div>
@@ -108,17 +108,24 @@
         </div>
         
         <div class="cont-info1 col-lg-8">
-            <h1>¿QUE HACEMOS?</h1>
+            <h2>¿QUE HACEMOS?</h2>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate nihil aliquam vitae alias ducimus animi assumenda error culpa voluptate dicta placeat, consectetur fugit minus cumque dignissimos qui eveniet omnis!</p>
         </div>
 
     </main>
 
-    <main class="row container-fluid nutricion">
+    <main class="row container-fluid nutricion" id="margen">
 
-        <div class="col-lg-12 nutricion ">
-            <h2></h2>
+        <div class="col-lg-12 nutricion-info ">
+            <h2>¿QUE OFRECEMOS?</h2>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus consequuntur tempora placeat nulla cupiditate ducimus illum delectus, eveniet harum eos, veritatis ad impedit velit tempore ut! Eum laudantium maxime libero?</p>
+        </div>
+
+        <div class="nutricion-botones">
+            <a href="paginas/Nutricion.html"><button type="button" class="btn btn-light">Nutricion</button></a>
+            <a href="#"><button type="button" class="btn btn-light">Deportes</button></a>
         </div>
 
     </main>
