--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -4,9 +4,38 @@
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="../assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
+        </div>
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><a href="../paginas/registro.html"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></a></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
+
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Inicio</a>
+                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="">Tenis</a>
+                <a class="dropdown-item" href="">Basket</a>
+                <a class="dropdown-item" href="">Voley</a>
+                <a class="dropdown-item" href="">Natacion</a>
+                <a class="dropdown-item" href="">Hockey</a>
+            </div>
+        </div>
+    </header>
+    <div class="contenedorTe-espacio-titulo">
+        <div class="tituloTe-espacio">
+             <h1>EXPLICACION DE JUEGO</h1>
+        </div>
+    </div>
     <div class="container-fluid contenedorTe-imagen1-info1">
         <div class="contenedorTe-info1">
             <div class="contenedorTe-info1-h1">
@@ -18,44 +47,50 @@
         </div>
     </div>
 
-    <div class="contenedorTe-grande-tarjetas">
+    <div class="contenedorTe-espacio-titulo">
+        <div class="tituloTe-espacio">
+             <h1>MEJORAS QUE NOTAS</h1>
+        </div>
+    </div>
+
+    <div class="contenedorTe-grande-tarjetas" id="margen">
         <div class="col-lg-4 tarjetaTe">
-            <div class="contenedorTe-imagen">
-                <img src="" alt="">
+            <div class="contenedorTe-imagen-1">
+                
             </div>
             <div class="titulo-tarjetaTe">
-                <h1>aaaaa</h1>
+                <h1>Pérdida de grasa corporal</h1>
             </div>
             <div class="parrafo-tarjetaTe">
-                <p></p>
+                <p>El tenis es una actividad física de alta intensidad que involucra movimientos rápidos, cambios de dirección y un trabajo cardiovascular constante, lo que contribuye a un alto gasto calórico. Esto, a su vez, favorece la pérdida de grasa corporal. Entre los efectos clave</p>
             </div>
         </div>
         <div class="col-lg-4 tarjetaTe">
-            <div class="contenedorTe-imagen">
+            <div class="contenedorTe-imagen-2">
                 <img src="" alt="">
             </div>
             <div class="titulo-tarjetaTe">
-                <h1>bbbbb</h1>
+                <h1>Salud mental</h1>
             </div>
             <div class="parrafo-tarjetaTe">
-                <p></p>
+                <p>El tenis no solo es beneficioso para el cuerpo, sino que también tiene un impacto positivo en la mente. Este deporte puede mejorar la salud mental de varias maneras</p>
             </div>
         </div>
         <div class="col-lg-4 tarjetaTe">
-            <div class="contenedorTe-imagen">
+            <div class="contenedorTe-imagen-3">
                 <img src="" alt="">
             </div>
             <div class="titulo-tarjetaTe">
-                <h1>cccc</h1>
+                <h1>Salud cardiovascular</h1>
             </div>
             <div class="parrafo-tarjetaTe">
-                <p></p>
+                <p>El tenis tiene un impacto muy positivo en la salud del corazón y el sistema cardiovascular debido a la naturaleza dinámica del deporte, que incluye sprints, cambios rápidos de ritmo y esfuerzos prolongados. Esto conlleva varios beneficios</p>
             </div>
         </div>
     </div>
     
     <div class="row col-lg-12 contenedorTe-grande-mapa" id="margen">
-        <div class="contenedorTe-mapa">
+        <div class="contenedorTe-mapa" id="margen">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26287.202991424674!2d-58.50689477773133!3d-34.55607776666323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732063948323!5m2!1ses-419!2sar"></iframe>
         </div>
         <div class="contenedorTe-text-mapa">
