arrgle algunas cosas

--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -71,7 +71,7 @@
     </div>
     <h1 class="jugadores">Los 3 jugadores mas importantes del voley</h1>
     <div class="karchEEUU"> 
-            <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 40%;"> 
+            <img src="../assets/imagenes/karchEEUU.png" style="border-radius: 40px;" width="520px" height="200px"> 
             <p>LAUSANA, Suiza, 5 de febrero de 2019 - Charles Frederick "Karch" Kiraly es una de las verdaderas leyendas del voleibol. Es el único jugador en la historia que ha ganado el oro olímpico en voleibol (1984 y 1988) y voleibol de playa (1996), cuando el deporte hizo su debut en los Juegos Olímpicos.</p> 
     </div>
     <div class="gibaBR"> 
