--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="" data-bs-toggle="dropdown"><img class="menu" src="assets/iconos/menu.png" alt=""></a>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">Inicio</a>
-                <a class="dropdown-item" href="">Nutricion</a>
+                <a class="dropdown-item" href="paginas/Nutricion.html">Nutricion</a>
                 <a class="dropdown-item" href="paginas/Futbol.html">Futbol</a>
                 <a class="dropdown-item" href="paginas/Tenis.html">Tenis</a>
                 <a class="dropdown-item" href="paginas/Basquetball.html">Basket</a>
