--- a/paginas/Nutricion.html
+++ b/paginas/Nutricion.html
@@ -4,9 +4,30 @@
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nutricion</title>
 </head>
 <body>
+    <header class="row container-fluid" id="header">
+        <div class="logoP col-lg-7">
+            <img src="assets/iconos/logo.png" alt="">
+            <h1>Healthy Balance</h1>
+        </div>
+        <div class="maslogos col-lg-5">
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/registro.png" alt=""><p>Regístrate</p></button>
+            <button type="button" class="btn btn-outline-light"><img src="../assets/iconos/sesion.png" alt=""><p>Inicia Sesión</p></button>            
+            <a href="" data-bs-toggle="dropdown"><img class="menu" src="../assets/iconos/menu.png" alt=""></a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="../index.html">Inicio</a>
+                <a class="dropdown-item" href="#">Nutricion</a>
+                <a class="dropdown-item" href="../paginas/Futbol.html">Futbol</a>
+                <a class="dropdown-item" href="../paginas/Tenis.html">Tenis</a>
+                <a class="dropdown-item" href="../paginas/Basquetball.html">Basket</a>
+                <a class="dropdown-item" href="../paginas/Volley.html">Voley</a>
+                <a class="dropdown-item" href="../paginas/Natacion.html">Natacion</a>
+                <a class="dropdown-item" href="../paginas/Hockey.html">Hockey</a>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
