--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -4,9 +4,11 @@
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basquet</title>
 </head>
 <body>
+    
+
     
 </body>
 </html>
