--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         
     </main>-->
 
+    <main class="row container-fluid titulo-princ">
+        <h1>DEPORTES</h1>
+    </main>
 
     <main class="row container-fluid link" id="margen">
 
@@ -129,5 +132,22 @@
         </div>
 
     </main>
+    
+    <main class="row container-fluid linea-2" id="margen">
+
+        <div class="col-lg-12 linea-forma-2" style="border-radius: 5px;">
+
+        </div>
+
+    </main>
+
+    <main class="row container-fluid nutricion">
+
+        <div class="nutricion-titulo">
+            <h1>NUTRICION</h1>
+        </div>
+
+    </main>
+
 </body>
 </html>
