--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -31,17 +31,19 @@
             </div>
         </div>
     </header>
-    <div class="contenedorTe-espacio-titulo">
-        <div class="tituloTe-espacio">
-             <h1>EXPLICACION DE JUEGO</h1>
+
+    <div class="col-lg-12 contenedorTe-grande-tenis">
+        <div class="col-lg-4 contenedorTe-imagen-tenis">
+            <img src="../assets/imagenes/tenis1.png" alt="" width="100%" height="100%">
         </div>
-    </div>
-    <div class="container-fluid contenedorTe-imagen1-info1">
-        <div class="contenedorTe-info1">
-            <div class="contenedorTe-info1-h1">
+        <div class="col-lg-4 contenedorTe-text-tenis">
+            <div class="col-lg-12 tituloTe-tenis">
                 <h1>TENIS</h1>
             </div>
-            <div class="contenedorTe-info1-p1">
+            <div class="col-lg-10 lineaTe">
+
+            </div>
+            <div class="col-lg-12 parrafoTe-tenis">
                 <p>Se disputa entre dos jugadores/as (individuales) o entre dos parejas (dobles) jugando con raquetas y pelotas y consiste en golpear la pelota después de un rebote o antes que rebote con la raqueta para que vaya de un lado al otro del campo pasando por encima de la red.</p>
             </div>
         </div>
