Natacion sin perfeccionar

--- a/paginas/Natacion.html
+++ b/paginas/Natacion.html
@@ -41,7 +41,7 @@
         </div>
         <!-- Cards de Gotas -->
         <div class="contenedor">
-            <div><h1>Beneficios de la Natacion</h1></div>
+            <div class="titulo"><h1>Beneficios de la Natacion</h1></div>
             <div class="contcolum">
                 <div class="columna1">
                     <div class="drop" style="--clr: #ff0f5b">
@@ -81,20 +81,46 @@
                 </div>
             </div>
         </div>
+
+        <div class="titulo"><h1>Consejos del Deporte</h1></div>
+
+        <div class="cont">
+          <div class="card2">
+            <img src="../assets/imagenes/consejos1.webp" alt="">
+            <div class="card2-body">
+              <h2>Consejo1</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minus libero ducimus eum obcaecati facere maxime aut dolore! Eos similique eum aliquam soluta. Quis, consequuntur officiis cum aperiam cumque voluptatum.</p>
+            </div>
+          </div>
+          <div class="card2">
+            <img src="../assets/imagenes/consejos2.jpeg" alt="">
+            <div class="card2-body">
+              <h2>Consejo1</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minus libero ducimus eum obcaecati facere maxime aut dolore! Eos similique eum aliquam soluta. Quis, consequuntur officiis cum aperiam cumque voluptatum.</p>
+            </div>
+          </div>
+          <div class="card2">
+            <img src="../assets/imagenes/consejo3.jpg" alt="">
+            <div class="card2-body">
+              <h2>Consejo1</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro minus libero ducimus eum obcaecati facere maxime aut dolore! Eos similique eum aliquam soluta. Quis, consequuntur officiis cum aperiam cumque voluptatum.</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row container-fluid contFut-grande-mapa">
+          <h1>PUNTOS DE ACTIVIDAD</h1>
+          <div class="linea">
+  
+          </div>
+          <div class="container-fluid contfut-mapa">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26280.332501729314!2d-58.500377938983036!3d-34.577814875530535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sclub%20natacion!5e0!3m2!1ses-419!2sar!4v1732026784596!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
         
-    </div>
-    <div class="row container-fluid contFut-grande-mapa">
-        <h1>PUNTOS DE ACTIVIDAD</h1>
-        <div class="linea">
 
-        </div>
-        <br>
-        <div class="container-fluid contfut-mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26280.332501729314!2d-58.500377938983036!3d-34.577814875530535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sclub%20natacion!5e0!3m2!1ses-419!2sar!4v1732026784596!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
-
-    <div class="container">
+      <div class="container">
         <input type="radio" name="slider" id="s1" checked />
         <input type="radio" name="slider" id="s2" />
         <input type="radio" name="slider" id="s3" />
@@ -247,5 +273,9 @@
           </label>
         </div>
       </div>
+
+
+    </div>
+
 </body>
 </html>
