--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -40,8 +40,10 @@
             <div class="col-lg-12 tituloTe-tenis">
                 <h1>TENIS</h1>
             </div>
-            <div class="col-lg-10 lineaTe">
+            <div class="col-lg-12 contenedorTe-linea" >
+                <div class="lineaTe">
 
+                </div>
             </div>
             <div class="col-lg-12 parrafoTe-tenis">
                 <p>Se disputa entre dos jugadores/as (individuales) o entre dos parejas (dobles) jugando con raquetas y pelotas y consiste en golpear la pelota después de un rebote o antes que rebote con la raqueta para que vaya de un lado al otro del campo pasando por encima de la red.</p>
