--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
     </main>
 
-    <main class="row container-fluid nutricion" id="margen">
+    <main class="row container-fluid quienessomos" id="margen">
 
-        <div class="col-lg-12 nutricion-info ">
+        <div class="col-lg-12 quinessomos-info ">
             <h2>¿QUE OFRECEMOS?</h2>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus consequuntur tempora placeat nulla cupiditate ducimus illum delectus, eveniet harum eos, veritatis ad impedit velit tempore ut! Eum laudantium maxime libero?</p>
@@ -132,22 +132,10 @@
         </div>
 
     </main>
-    
-    <main class="row container-fluid linea-2" id="margen">
 
-        <div class="col-lg-12 linea-forma-2" style="border-radius: 5px;">
+    <footer>
 
-        </div>
-
-    </main>
-
-    <main class="row container-fluid nutricion">
-
-        <div class="nutricion-titulo">
-            <h1>NUTRICION</h1>
-        </div>
-
-    </main>
+    </footer>
 
 </body>
 </html>
