--- a/paginas/Nutricion.html
+++ b/paginas/Nutricion.html
@@ -32,7 +32,47 @@
         </div>
     </header>
     
+    <main class="nutricion row container-fluid" id="margen">
+        <div class="col-lg-4 nutricion-info" style="border-radius: 25px;">
+            <h1>NUTRICION</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur veniam nostrum nulla deserunt doloribus omnis culpa magnam iste praesentium voluptatibus tenetur assumenda, delectus dignissimos libero sequi dolorem quasi ad quae.</p>
+        </div>
+        
 
-    <h1>titulo</h1>
+        <div class="col-lg-6 nutricion-carrousel">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../assets/imagenes/deportes relleno N.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../assets/imagenes/comida saludable N.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../assets/imagenes/deportes relleno N.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../assets/imagenes/saludmental.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+    </main>
+
+    <main class="row container-fluid secciones col-lg-12">
+
+        <h2>SECCIONES</h2>
+
+    </main>
+
+
 </body>
 </html>
