margen pag princ

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
     </main>-->
 
-    <main class="row container-fluid titulo-princ">
+    <main class="row container-fluid titulo-princ" id="margen">
         <h1>DEPORTES</h1>
     </main>
 
