--- a/paginas/Volley.html
+++ b/paginas/Volley.html
@@ -87,5 +87,133 @@
     <div class="mapa">
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37706.700729251126!2d-58.52282834595!3d-34.577579778973316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20voley!5e0!3m2!1ses-419!2sar!4v1732062086454!5m2!1ses-419!2sar" width="600px" height="500px"></iframe>
     </div>
+    <h1>carrusel</h1>
+    <div class="container">
+        <input type="radio" name="slider" id="s1" checked />
+        <input type="radio" name="slider" id="s2" />
+        <input type="radio" name="slider" id="s3" />
+        <input type="radio" name="slider" id="s4" />
+        <input type="radio" name="slider" id="s5" />
+        <div class="cards">
+          <label for="s1" id="slide1">
+            <div class="card">
+              <div class="image">
+                <img src="../assets/imagenes/zapasvol.png" alt="sonic" />
+                <div class="dots">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="infos">
+                <span class="name">zapatillas y otras cosas</span>
+                <span class="lorem">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum nisi illum facilis minima, numquam, 
+                        dicta provident in ipsum ratione cum culpa architecto maiores facere commodi excepturi consequuntur 
+                        obcaecati deserunt vero.</p>
+                </span>
+                <div class="actions">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-bookmark"></i>
+                  <i class="fa-solid fa-share-nodes"></i>
+                </div>
+              </div>
+            </div>
+          </label>
+  
+          <label for="s2" id="slide2">
+            <div class="card">
+              <div class="image">
+                <img src="../assets/imagenes/ropavol.png" alt="sonic" />
+                <div class="dots">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="infos">
+                <span class="name">ropa</span>
+                <span class="lorem"
+                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Soluta debitis suscipit architecto quis perferendis cupiditate
+                  dolore provident, eveniet facere commodi consectetur veniam
+                  nostrum atque enim ipsam totam perspiciatis, veritatis
+                  sunt?</span
+                >
+                <a href="/details" class="btn-details">Saber Más</a>
+                <div class="actions">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-bookmark"></i>
+                  <i class="fa-solid fa-share-nodes"></i>
+                </div>
+              </div>
+            </div>
+          </label>
+  
+          <label for="s3" id="slide3">
+            <div class="card">
+              <div class="image">
+                <img src="../assets/imagenes/redvol.png" alt="sonic" />
+                <div class="dots">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="infos">
+                <span class="name">red</span>
+                <span class="lorem"
+                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Soluta debitis suscipit architecto quis perferendis cupiditate
+                  dolore provident, eveniet facere commodi consectetur veniam
+                  nostrum atque enim ipsam totam perspiciatis, veritatis
+                  sunt?</span
+                >
+                <a href="/details" class="btn-details">Saber Más</a>
+                <div class="actions">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-bookmark"></i>
+                  <i class="fa-solid fa-share-nodes"></i>
+                </div>
+              </div>
+            </div>
+          </label>
+  
+          <label for="s4" id="slide4">
+            <div class="card">
+              <div class="image">
+                <img src="../assets/imagenes/pelotavol.png" alt="sonic" />
+                <div class="dots">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="infos">
+                <span class="name">pelota</span>
+                <span class="lorem"
+                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Soluta debitis suscipit architecto quis perferendis cupiditate
+                  dolore provident, eveniet facere commodi consectetur veniam
+                  nostrum atque enim ipsam totam perspiciatis, veritatis
+                  sunt?</span
+                >
+                <a href="/details" class="btn-details">Saber Más</a>
+                <div class="actions">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-bookmark"></i>
+                  <i class="fa-solid fa-share-nodes"></i>
+                </div>
+              </div>
+            </div>
+          </label>
+            </div>
+          </label>
+        </div>
+      </div>
 </body>
 </html>
