--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -28,8 +28,38 @@
             </div>
         </div>
     </header>
-    <div>
-        
-    </div>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact Ups</h3>
+                <p>Gmail:infotdbas@udsasbfua</p>
+                <p>Numero:4124142141244</p>
+                <p>Informacion:</p>
+            </div>
+            <div class="footer-content">
+                <h3>Paginas</h3>
+                <ul class="list">
+                    <li><a href="">Futbol</a></li>
+                    <li><a href="">Tenis</a></li>
+                    <li><a href="">Natación</a></li>
+                    <li><a href="">Hockey</a></li>
+                    <li><a href="">Voley</a></li>
+                    <li><a href="">Basquet</a></li>
+                </ul>
+            </div>
+            <div class="footer-content">
+                <ul class="social-icons">
+                    <h3>Redes</h3>
+                     <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                     <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                     <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom-bar">
+            <p>&copy; 2024 Your comapny . all rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
