--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -57,32 +57,67 @@
         </div>
     </div>
 
-    <div class="contenedorTe-grande-tarjetas" id="margen">
-        <div class="col-lg-4 tarjetaTe">
-            <div class="titulo-tarjetaTe">
-                <h1>Pérdida de grasa corporal</h1>
+    <main class="row col-lg-12 col-sm-12 contenedorTe-mejoras-imagnes" id="margen">
+        <div class="col-lg-4 contenedorTe-fila-mejoras">
+            <div class="col-lg-12 contenedorTe-fila">
+                <div class="col-lg-7 contenedorTe-mejoras">
+                    <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
+                        <h1>1: Reduce el estrés</h1>
+                    </div>
+                    <div class="col-lg-12 contenedorTe-text-mejoras">
+                        <div class="col-lg-10 parrafoTe-mejoras"> 
+                            <p>Aumenta la liberación de endorfinas, lo que contribuye a reducir el estrés y mejorar el estado de ánimo</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="parrafo-tarjetaTe">
-                <p>El tenis es una actividad física de alta intensidad que involucra movimientos rápidos, cambios de dirección y un trabajo cardiovascular constante, lo que contribuye a un alto gasto calórico. Esto, a su vez, favorece la pérdida de grasa corporal. Entre los efectos clave</p>
+            <div class="col-lg-12 contenedorTe-fila">
+                <div class="col-lg-7 contenedorTe-mejoras">
+                    <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
+                        <h1>2: Fortalecimiento muscular</h1>
+                    </div>
+                    <div class="col-lg-12 contenedorTe-text-mejoras">
+                        <div class="col-lg-10 parrafoTe-mejoras"> 
+                            <p>El tenis requiere un uso intensivo de los músculos de las piernas, los brazos y el tronco.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 contenedorTe-fila">
+                <div class="col-lg-7 contenedorTe-mejoras">
+                    <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
+                        <h1>3: Mejora el equilibrio</h1>
+                    </div>
+                    <div class="col-lg-12 contenedorTe-text-mejoras">
+                        <div class="col-lg-10 parrafoTe-mejoras"> 
+                            <p>El tenis implica coordinación entre los ojos, las manos y los pies para golpear la pelota con precisión.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 tarjetaTe">
-            <div class="titulo-tarjetaTe">
-                <h1>Salud mental</h1>
+        <div class="col-lg-8 contenedorTe-imagenes-mejoras">
+            <div class="col-lg-6 contenedorTe-columna1-mejoras">
+                <div class="col-lg-8 contenedorTe-imagen1-mejoras">
+                    <div class="col-lg-2 contenedorTe-num-mejoras">
+                        <h1>1</h1>
+                    </div>
+                </div>
+                <div class="col-lg-10 contenedorTe-imagen2-mejoras">
+                    <div class="col-lg-2 contenedorTe-num-mejoras">
+                        <h1>2</h1>
+                    </div>
+                </div>
             </div>
-            <div class="parrafo-tarjetaTe">
-                <p>El tenis no solo es beneficioso para el cuerpo, sino que también tiene un impacto positivo en la mente. Este deporte puede mejorar la salud mental de varias maneras</p>
+            <div class="col-lg-5 contenedorTe-columna2-mejoras">
+                <div class="col-lg-10 contenedorTe-imagen3-mejoras">
+                    <div class="col-lg-2 contenedorTe-num-mejoras">
+                        <h1>3</h1>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 tarjetaTe">
-            <div class="titulo-tarjetaTe">
-                <h1>Salud cardiovascular</h1>
-            </div>
-            <div class="parrafo-tarjetaTe">
-                <p>El tenis tiene un impacto muy positivo en la salud del corazón y el sistema cardiovascular debido a la naturaleza dinámica del deporte, que incluye sprints, cambios rápidos de ritmo y esfuerzos prolongados. Esto conlleva varios beneficios</p>
-            </div>
-        </div>
-    </div>
+    </main>
     
     <div class="row col-lg-12 contenedorTe-grande-mapa" id="margen">
         <div class="contenedorTe-mapa" id="margen">
