--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basquet</title>
+    
+    <title>Basquets</title>
 </head>
 <body>
     <header class="row container-fluid" id="header">
@@ -28,8 +32,16 @@
             </div>
         </div>
     </header>
-    <div>
-        
+    <h1>Jugadores mas destacados del basket</h1>
+    <div class="Malone">
+        <img src="../assets/imagenes/maloneB.png" alt="">
+        <p>Karl Anthony Malone es un exjugador de baloncesto estadounidense, miembro del Basketball Hall of Fame que disputó 19 
+            temporadas en la NBA, 18 de ellas en los Utah Jazz, donde formó, junto con el base John Stockton, una de las parejas 
+            más relevantes de la historia de la NBA.​​</p>
+    </div>
+    <h1>Mapa de algunas cnachas de basket</h1>
+    <div class="mapaB">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d420384.05858289736!2d-58.4161919700843!3d-34.59782771278762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scanchas%20de%20basquet!5e0!3m2!1ses-419!2sar!4v1732482785890!5m2!1ses-419!2sar"></iframe>
     </div>
 </body>
 </html>
