--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -39,21 +39,21 @@
             <div class="footer-content">
                 <h3>Paginas</h3>
                 <ul class="list">
-                    <li><a href="">Futbol</a></li>
-                    <li><a href="">Tenis</a></li>
-                    <li><a href="">Natación</a></li>
-                    <li><a href="">Hockey</a></li>
-                    <li><a href="">Voley</a></li>
-                    <li><a href="">Basquet</a></li>
+                    <li><a href="" class="a-footer">Futbol</a></li>
+                    <li><a href="" class="a-footer">Tenis</a></li>
+                    <li><a href="" class="a-footer">Natación</a></li>
+                    <li><a href="" class="a-footer">Hockey</a></li>
+                    <li><a href="" class="a-footer">Voley</a></li>
+                    <li><a href="" class="a-footer">Basquet</a></li>
                 </ul>
             </div>
             <div class="footer-content">
                 <ul class="social-icons">
                     <h3>Redes</h3>
-                     <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                     <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                     <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fab fa-linkedin"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-facebook"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="" class="a-footer"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="" class="a-footer"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
