test de diseño basquet

--- a/paginas/Basquetball.html
+++ b/paginas/Basquetball.html
@@ -28,6 +28,22 @@
             </div>
         </div>
     </header>
+
+    <section class="row">
+        <div class="cont1 contBordes col-lg-4">
+            <img src="" class="juador1">
+            <h2></h2>
+        </div>
+        <div class="cont2 contBordes col-lg-4">
+            <img src="" class="jugador2">
+            <h2></h2>
+        </div>
+        <div class="cont3 contBordes col-lg-4">
+            <img src="" class="jugador3">
+            <h2></h2>
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             <div class="footer-content">
