--- a/paginas/Tenis.html
+++ b/paginas/Tenis.html
@@ -57,9 +57,9 @@
         </div>
     </div>
 
-    <main class="row col-lg-12 col-sm-12 contenedorTe-mejoras-imagnes" id="margen">
+    <main class="row container-fluid contenedorTe-mejoras-imagnes" id="margen">
         <div class="col-lg-4 contenedorTe-fila-mejoras">
-            <div class="col-lg-12 contenedorTe-fila">
+            <div class="contenedorTe-fila">
                 <div class="col-lg-7 contenedorTe-mejoras">
                     <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
                         <h1>1: Reduce el estrés</h1>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 contenedorTe-fila">
+            <div class="contenedorTe-fila">
                 <div class="col-lg-7 contenedorTe-mejoras">
                     <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
                         <h1>2: Fortalecimiento muscular</h1>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 contenedorTe-fila">
+            <div class="contenedorTe-fila">
                 <div class="col-lg-7 contenedorTe-mejoras">
                     <div class="col-lg-12 contenedorTe-titulo-mejoras" id="margen">
                         <h1>3: Mejora el equilibrio</h1>
@@ -96,41 +96,23 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-8 contenedorTe-imagenes-mejoras">
-            <div class="col-lg-6 contenedorTe-columna1-mejoras">
-                <div class="col-lg-8 contenedorTe-imagen1-mejoras">
-                    <div class="col-lg-2 contenedorTe-num-mejoras">
-                        <h1>1</h1>
-                    </div>
+
+        <div class="col-lg-8 contenedorColumnas">
+            <div class="columna1 ">
+                <div class="columna1-card1">
+
                 </div>
-                <div class="col-lg-10 contenedorTe-imagen2-mejoras">
-                    <div class="col-lg-2 contenedorTe-num-mejoras">
-                        <h1>2</h1>
-                    </div>
+                <div class="columna1-card2">
+                    
                 </div>
             </div>
-            <div class="col-lg-5 contenedorTe-columna2-mejoras">
-                <div class="col-lg-10 contenedorTe-imagen3-mejoras">
-                    <div class="col-lg-2 contenedorTe-num-mejoras">
-                        <h1>3</h1>
-                    </div>
+            <div class="columna2">
+                <div class="columna2-card">
+
                 </div>
             </div>
         </div>
     </main>
     
-    <div class="row col-lg-12 contenedorTe-grande-mapa" id="margen">
-        <div class="contenedorTe-mapa" id="margen">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26287.202991424674!2d-58.50689477773133!3d-34.55607776666323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stenis!5e0!3m2!1ses-419!2sar!4v1732063948323!5m2!1ses-419!2sar"></iframe>
-        </div>
-        <div class="contenedorTe-text-mapa">
-            <div class="titulo-mapa">
-                <h1>Tenis Actividad</h1>
-            </div>
-            <div class="parrafo-mapa">
-                <p>Lugares mas cercanos donde podes disfrutar de jugar al tenis desde lugares para aprender a canchas para jugar vos</p>
-            </div>
-        </div>
-    </div>
 </body>
 </html> 
