--- a/paginas/Futbol.html
+++ b/paginas/Futbol.html
@@ -9,7 +9,7 @@
     <title>Deporte - Futbol</title>
 </head>
 <body>
-    <header class="row container-fluid" id="header">
+    <header class="row container-fluid" id="header" style="background-color: white;">
         <div class="logoP col-lg-7">
             <img src="../assets/iconos/logo.png" alt="">
             <h1>Healthy Balance</h1>
