--- a/paginas/Natacion.html
+++ b/paginas/Natacion.html
@@ -130,7 +130,7 @@
           <label for="s1" id="slide1">
             <div class="card">
               <div class="image">
-                <img src="Images/img1.jpg" alt="sonic" />
+                <img src="../assets/imagenes/bañadormujer.png" alt="sonic" />
                 <div class="dots">
                   <div></div>
                   <div></div>
@@ -138,8 +138,8 @@
                 </div>
               </div>
               <div class="infos">
-                <span class="name">sonic & Tails</span>
-                <span class="lorem"></span
+                <span class="name">Bañador Mujer</span>
+                <span class="lorem">Es el tipo clásico de bañador que cubre todo el cuerpo desde los hombros hasta las caderas o muslo.</span
                 >
                 <a href="/details" class="btn-details">Saber Más</a>
                 <div class="actions">
@@ -155,7 +155,7 @@
           <label for="s2" id="slide2">
             <div class="card">
               <div class="image">
-                <img src="Images/img2.jpg" alt="sonic" />
+                <img src="../assets/imagenes/bañador.png" alt="sonic" />
                 <div class="dots">
                   <div></div>
                   <div></div>
@@ -163,13 +163,9 @@
                 </div>
               </div>
               <div class="infos">
-                <span class="name">sonic the hedgehog</span>
+                <span class="name">Bañador:</span>
                 <span class="lorem"
-                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Soluta debitis suscipit architecto quis perferendis cupiditate
-                  dolore provident, eveniet facere commodi consectetur veniam
-                  nostrum atque enim ipsam totam perspiciatis, veritatis
-                  sunt?</span
+                  >El bañador es esencial para nadar. Dependiendo de tus preferencias, puedes elegir entre bañadores tipo short, trajes de baño de una o dos piezas, o un traje de baño completo.</span
                 >
                 <a href="/details" class="btn-details">Saber Más</a>
                 <div class="actions">
@@ -185,7 +181,7 @@
           <label for="s3" id="slide3">
             <div class="card">
               <div class="image">
-                <img src="Images/img3.jpg" alt="sonic" />
+                <img src="../assets/imagenes/gafasdenatacion.png" alt="sonic" />
                 <div class="dots">
                   <div></div>
                   <div></div>
@@ -193,13 +189,9 @@
                 </div>
               </div>
               <div class="infos">
-                <span class="name">sonic & Tails</span>
+                <span class="name">Gafas de natación:</span>
                 <span class="lorem"
-                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Soluta debitis suscipit architecto quis perferendis cupiditate
-                  dolore provident, eveniet facere commodi consectetur veniam
-                  nostrum atque enim ipsam totam perspiciatis, veritatis
-                  sunt?</span
+                  >Las gafas son importantes para proteger los ojos del cloro y mejorar la visibilidad bajo el agua. Además, evitan que el agua entre en los ojos, lo que puede ser incómodo.</span
                 >
                 <a href="/details" class="btn-details">Saber Más</a>
                 <div class="actions">
@@ -215,7 +207,7 @@
           <label for="s4" id="slide4">
             <div class="card">
               <div class="image">
-                <img src="Images/img4.jpg" alt="sonic" />
+                <img src="../assets/imagenes/gorrodenatacion.png" alt="sonic" />
                 <div class="dots">
                   <div></div>
                   <div></div>
@@ -223,13 +215,10 @@
                 </div>
               </div>
               <div class="infos">
-                <span class="name">knuckles the Echidna</span>
+                <span class="name">Gorro de natación:</span>
                 <span class="lorem"
-                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Soluta debitis suscipit architecto quis perferendis cupiditate
-                  dolore provident, eveniet facere commodi consectetur veniam
-                  nostrum atque enim ipsam totam perspiciatis, veritatis
-                  sunt?</span
+                  >El gorro protege tu cabello del cloro, que puede dañarlo, y además ayuda a reducir la resistencia del agua. También es obligatorio en algunas piscinas por razones de higiene.
+                  </span
                 >
                 <a href="/details" class="btn-details">Saber Más</a>
                 <div class="actions">
@@ -245,7 +234,7 @@
           <label for="s5" id="slide5">
             <div class="card">
               <div class="image">
-                <img src="Images/img5.jpg" alt="sonic" />
+                <img src="../assets/imagenes/toalla.png" alt="sonic" />
                 <div class="dots">
                   <div></div>
                   <div></div>
@@ -253,13 +242,10 @@
                 </div>
               </div>
               <div class="infos">
-                <span class="name">sonic & knuckles</span>
+                <span class="name">Toalla</span>
                 <span class="lorem"
-                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Soluta debitis suscipit architecto quis perferendis cupiditate
-                  dolore provident, eveniet facere commodi consectetur veniam
-                  nostrum atque enim ipsam totam perspiciatis, veritatis
-                  sunt?</span
+                  >Necesitarás una toalla para secarte antes y después de nadar. En piscinas públicas, algunas personas prefieren una toalla extra para sentarse o para usar en los vestuarios.
+                  </span
                 >
                 <a href="/details" class="btn-details">Saber Más</a>
                 <div class="actions">
